--- a/agol-inventory/agol-inventory.ipynb
+++ b/agol-inventory/agol-inventory.ipynb
@@ -2,39 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "GIS connected.\n",
-      "98 items to check. Progress updates every 5% (of items checked).Starting at 2022-02-23T16:05:28.175644\n",
-      "5% of inputs checked. 0:00:01.628392 elapsed and 0 connections foundsince last progress update.\n",
-      "10% of inputs checked. 0:00:01.200964 elapsed and 0 connections foundsince last progress update.\n",
-      "15% of inputs checked. 0:00:02.151963 elapsed and 1 connections foundsince last progress update.\n",
-      "20% of inputs checked. 0:00:00.910697 elapsed and 0 connections foundsince last progress update.\n",
-      "26% of inputs checked. 0:00:02.474468 elapsed and 0 connections foundsince last progress update.\n",
-      "31% of inputs checked. 0:00:01.630397 elapsed and 0 connections foundsince last progress update.\n",
-      "36% of inputs checked. 0:00:02.691786 elapsed and 5 connections foundsince last progress update.\n",
-      "41% of inputs checked. 0:00:02.908840 elapsed and 7 connections foundsince last progress update.\n",
-      "46% of inputs checked. 0:00:01.930084 elapsed and 2 connections foundsince last progress update.\n",
-      "51% of inputs checked. 0:00:02.314744 elapsed and 6 connections foundsince last progress update.\n",
-      "55% of inputs checked. 0:00:03.395514 elapsed and 2 connections foundsince last progress update.\n",
-      "60% of inputs checked. 0:00:01.815936 elapsed and 0 connections foundsince last progress update.\n",
-      "65% of inputs checked. 0:00:01.870222 elapsed and 1 connections foundsince last progress update.\n",
-      "70% of inputs checked. 0:00:01.143533 elapsed and 0 connections foundsince last progress update.\n",
-      "76% of inputs checked. 0:00:01.579528 elapsed and 0 connections foundsince last progress update.\n",
-      "81% of inputs checked. 0:00:01.739087 elapsed and 0 connections foundsince last progress update.\n",
-      "86% of inputs checked. 0:00:01.707373 elapsed and 0 connections foundsince last progress update.\n",
-      "91% of inputs checked. 0:00:02.285061 elapsed and 0 connections foundsince last progress update.\n",
-      "96% of inputs checked. 0:00:02.474470 elapsed and 0 connections foundsince last progress update.\n",
-      "All done!\n",
-      "Total time elapsed: 0:00:39.942134\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [],
    "source": [
     "\"\"\"Find connections between ArcGIS Online items and create an Excel table.\n",
     "\n",
@@ -58,11 +30,11 @@
     "# USER INPUTS__________________________________________________________________\n",
     "# Enter file path to CSV exported from AGOL between single quotes (keep r).\n",
     "# If CSV and script/project are in the same folder, only file name is required.\n",
-    "file_path_to_organization_items_csv = r'D:\\ArcGIS\\Projects\\AGOL_Item_Relationships\\OrganizationItems_100.csv'\n",
+    "file_path_to_organization_items_csv = r''\n",
     "\n",
     "# Enter path to folder where output table will be saved. Leave blank and\n",
     "# output will be saved to the same folder as the script or APRX file.\n",
-    "folder_for_output_file = r'D:\\ArcGIS\\Projects\\AGOL_Item_Relationships'\n",
+    "folder_for_output_file = r''\n",
     "\n",
     "# If you are not logged into an Admin account, enter username and password for\n",
     "# Admin account here. DELETE AFTER RUNNING AND DO NOT SAVE.\n",
@@ -326,13 +298,6 @@
     "# Prit total elapsed time\n",
     "print('Total time elapsed: {}'.format(datetime.now() - start_time))\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
