--- a/census/Development.ipynb
+++ b/census/Development.ipynb
@@ -322,9 +322,11 @@
     "    '350619710002', '350619710003', '350619710004'\n",
     "    ]\n",
     "\n",
+    "# Having the api_year variable in here is probably a problem... should that be regex instead?\n",
+    "# Regex is probably more pythonic, but found a way to make a little function\n",
     "filename_dict = OrderedDict(\n",
     "    {\n",
-    "        f'In {api_year} InflationAdjusted Dollars': '',\n",
+    "#         f'In {api_year} InflationAdjusted Dollars': '',\n",
     "        ' ': '_',\n",
     "        'The_United_States': 'U.S.',\n",
     "        'In_The_Past_12_Months': 'In_Past_Year',\n",
@@ -586,18 +588,49 @@
     "        error_log.loc[len(df.index)] = [v for k, v in bad_result.items()]\n",
     "        return None\n",
     "\n",
-    "'''    \n",
-    "def countiesByBlockGroups(list_of_county_fips_codes):\n",
+    "\n",
+    "def countiesByBlockGroups(api_key, table, list_of_county_fips_codes, year=None, error_log=None):\n",
+    "    api_key = api_key\n",
+    "    \n",
+    "#     table = str(table)\n",
+    "#     if '_' not in table:\n",
+    "#         table = f'group({table})'\n",
+    "#     elif '_' in table:\n",
+    "#         table = table\n",
+    "#     else:\n",
+    "#         return None\n",
+    "\n",
+    "    table = setTable(table)\n",
+    "    \n",
+    "    if year:\n",
+    "        year = str(year)\n",
+    "    else:\n",
+    "        year = mostRecentYear()\n",
+    "    \n",
+    "    e = error_log\n",
+    "    \n",
     "    if type(list_of_county_fips_codes) == list:\n",
     "        fips = [str(c).zfill(3) for c in list_of_county_fips_codes]\n",
     "        counties = [f for f in fips if len(f) == 3]\n",
-    "        bg = setArea('bg', '*')\n",
-    "        co = setCounty(counties[0])\n",
-    "        k = \n",
-    "        q = buildQuery(api_key, table, area_query=None, county_query=None, year=None)\n",
     "    else:\n",
     "        return None\n",
-    "'''\n",
+    "\n",
+    "    bg = setArea('bg', '*')\n",
+    "    co = setCounty(counties[0])\n",
+    "    q = buildQuery(api_key, table, area_query=bg, county_query=co, year=year)\n",
+    "\n",
+    "    df = getTableToPandas(q, e)\n",
+    "    \n",
+    "    if df:\n",
+    "        for c in counties[1:]:\n",
+    "            qx = q.replace(co, setCounty(c))\n",
+    "            dfx = getTableToPandas(qx, e)\n",
+    "            df = pd.concat([df, dfx], ignore_index=True)\n",
+    "        return df\n",
+    "    else:\n",
+    "        return None\n",
+    "    \n",
+    "\n",
     "\n",
     "# year_url = '{}{}/'.format(api_url, api_year)\n",
     "\n",
@@ -6961,6 +6994,7 @@
     "    )\n",
     "    for k, v in filename_dict.items():\n",
     "        t = t.replace(k, v)\n",
+    "    t = removeInflation(t)\n",
     "    t = t.replace('__', '_')\n",
     "    return t\n",
     "\n",
@@ -6973,6 +7007,39 @@
     "tableFileNames = {k: tableTitleFileName(v) for k, v in tableTitles.items()}\n",
     "\n",
     "universes = {k: v.replace('Universe: ', '') for k, v in tableUniverses.items()}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "simpleVariableDict = requests.get(VARIABLES_URL).json()['variables']\n",
+    "\n",
+    "def shortVariableDict(variables, table_list):\n",
+    "    shortDict = {}\n",
+    "    for k, v in variables.items():\n",
+    "        if k.split('_')[0] in table_list:\n",
+    "            shortDict[k] = v\n",
+    "        else:\n",
+    "            continue\n",
+    "    return shortDict\n",
+    "            \n",
+    "def fullVariableDict(variables):\n",
+    "    attrs = {}\n",
+    "    for k, v in variables.items():\n",
+    "        for i in variables[k][\"attributes\"].split(','):\n",
+    "            if 'EA' in i:\n",
+    "                attrs[i] = v['label'].replace('Estimate!!', 'Annotation of Estimate!!')\n",
+    "            elif 'MA' in i:\n",
+    "                attrs[i] = v['label'].replace('Estimate!!', 'Annotation of Margin of Error!!')\n",
+    "            elif 'M' in i:\n",
+    "                attrs[i] = v['label'].replace('Estimate!!', 'Margin of Error!!')\n",
+    "    return attrs\n",
+    "\n",
+    "shortenedVariables = shortVariableDict(simpleVariableDict, table_list)\n",
+    "allVariables = fullVariableDict(shortenedVariables)"
    ]
   },
   {
@@ -6999,9 +7066,9 @@
     "tableTitles = dict(zip(dpl['Table ID'], dpl['Table Title']))\n",
     "tableUniverses = dict(zip(dpl['Table ID'], dpl['Table Universe']))\n",
     "\n",
-    "tableFileNames = {k: REMOVESPECIALCHARACTERS(v) for k, v in tableTitles.items()}\n",
+    "tableFileNames = {k: tableTitleFileName(v) for k, v in tableTitles.items()}\n",
     "\n",
-    "universes = {k: v.replace('Universe: ', '') for k, v in tableUniverses.items()}\n",
+    "# universes = {k: v.replace('Universe: ', '') for k, v in tableUniverses.items()}\n",
     "\n",
     "\n",
     "\n",
@@ -7033,6 +7100,7 @@
     "    )\n",
     "    for k, v in filename_dict.items():\n",
     "        t = t.replace(k, v)\n",
+    "    t = removeInflation(t)\n",
     "    t = t.replace('__', '_')\n",
     "    return t\n",
     "    \n",
@@ -7065,7 +7133,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def cleanAlias(string):\n",
+    "    s = string.replace(':!!', '; ')\n",
+    "    s = s.replace('!!', ': ')\n",
+    "    return s"
+   ]
   },
   {
    "cell_type": "code",
