--- a/census/Development.ipynb
+++ b/census/Development.ipynb
@@ -582,6 +582,18 @@
     "        else:\n",
     "            return df\n",
     "# ---\n",
+    "\n",
+    "\n",
+    "## ------\n",
+    "        cols_by_letter = sortColumns(df)\n",
+    "        num_cols = cols_by_letter['E'] + cols_by_letter['M']\n",
+    "        # Should E and M be sorted together?\n",
+    "        # num_cols.sort()\n",
+    "        for c in num_cols:\n",
+    "            df[c] = pd.to_numeric(df[c], errors='coerce')\n",
+    "## ------\n",
+    "\n",
+    "\n",
     "    else:\n",
     "        bad_result = parseQuery(query)\n",
     "        # error_log = pd.concat([error_log, pd.DataFrame(bad_result)], ignore_index=True)\n",
@@ -3212,6 +3224,7 @@
     "# Adding MRCOG column County name columns should come before sorting columns\n",
     "\n",
     "def pandasRegion(DataFrame, SourceColumn, TargetColumn, Reference):\n",
+    "    '''DOES THIS NEED TO RETURN THE DF?'''\n",
     "    def insideRegion(pd_df):\n",
     "        g = pd_df[SourceColumn]\n",
     "        if g in Reference:\n",
@@ -3222,6 +3235,7 @@
     "    return DataFrame\n",
     "\n",
     "def areaName(DataFrame, SourceColumn, TargetColumn, Reference):\n",
+    "    '''DOES THIS NEED TO RETURN THE DF?'''\n",
     "    def nameLookup(pd_df):\n",
     "        f = pd_df[SourceColumn]\n",
     "        if f in Reference:\n",
