--- a/census/Staging.ipynb
+++ b/census/Staging.ipynb
@@ -74,6 +74,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "base_api_label_dictionary = {\n",
+    "    'GEO_ID': 'GeoID',\n",
+    "    'NAME': 'AreaName',\n",
+    "    'state': 'StateFIPS',\n",
+    "    'county': 'CountyFIPS',\n",
+    "    'tract': 'TractCE',\n",
+    "    'block group': 'BlkGrpCE'\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getUniversesFromShells(pathToTableShellsXLSX):\n",
+    "    t = pathToTableShellsXLSX\n",
+    "    shells = pd.read_excel(t)\n",
+    "    shells = shells[shells['Stub'].str.contains('Universe') == True]\n",
+    "    universes = dict(zip(shells['Table ID'], shells['Stub']))\n",
+    "    return universes\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<string>, line 9)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m                               Traceback (most recent call last)",
+      "File \u001b[0;34mC:\\Users\\Sagert Work\\AppData\\Local\\Programs\\ArcGIS\\Pro\\bin\\Python\\envs\\arcgispro-py3\\lib\\ast.py\u001b[0m, in \u001b[0;32mparse\u001b[0m:\nLine \u001b[0;34m35\u001b[0m:    \u001b[34mreturn\u001b[39;49;00m \u001b[36mcompile\u001b[39;49;00m(source, filename, mode, PyCF_ONLY_AST)\n",
+      "\u001b[0;31mSyntaxError\u001b[0m: invalid syntax (<string>, line 9)\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m"
+     ]
+    }
+   ],
+   "source": [
     "# Set year, key\n",
     "\n",
     "y = 2020\n",
@@ -81,7 +122,14 @@
     "\n",
     "# Set working paths\n",
     "\n",
-    "working_folder = path.normpath('D:/...........................................................')\n",
+    "working_folder = path.normpath('D:/Staging/acs2020v2')\n",
+    "\n",
+    "# Script creates output folders\n",
+    "out_anno_dir = path.join(working_folder, 'Tables_with_Annotation')\n",
+    "out_dir_tract = path.join(working_folder, 'ExcelWorkbooks_Tracts')\n",
+    "out_dir_bg = path.join(working_folder, 'ExcelWorkbooks_BlockGroups')\n",
+    "for d in [out_anno_dir, out_dir_tract, out_dir_bg]:\n",
+    "    makedirs(i, exist_ok=True)\n",
     "\n",
     "# Get list of tables\n",
     "tables = pd.read_excel(\n",
@@ -92,19 +140,101 @@
     "    squeeze=True\n",
     ").to_list()\n",
     "\n",
-    "# def getUniversesFromShells()\n",
+    "\n",
     "# def getUniversesFromOtherTable()\n",
+    "dataProductList_5Year_xlsx = 'D:/Staging/acs2020/2020_DataProductList_5Year.xlsx'\n",
+    "dpl = pd.read_excel(dataProductList_5Year_xlsx)\n",
+    "\n",
+    "tableTitles = dict(zip(dpl['Table ID'], dpl['Table Title']))\n",
+    "tableUniverses = dict(zip(dpl['Table ID'], dpl['Table Universe']))\n",
+    "\n",
+    "tableFileNames = {k: tableTitleFileName(v) for k, v in tableTitles.items()}\n",
+    "\n",
     "# def getVariablesByYear()\n",
+    "var_url = 'https://api.census.gov/data/{}/acs/acs5/variables.json'.format(y)\n",
+    "simpleVariableDict = requests.get(var_url).json()['variables']\n",
+    "shortenedVariables = shortVariableDict(simpleVariableDict, table_list)\n",
+    "allVariables = fullVariableDict(shortenedVariables)\n",
     "# def getConcept()\n",
     "\n",
+    "mrcog_counties = ['001', '043', '049', '057', '061']\n",
     "# Supp resources\n",
     "## Field/alias dictionary\n",
     "## Universes\n",
     "## Table/file names\n",
-    "\n",
+    "errors = createErrorLog()\n",
     "# For table in table list...\n",
+    "for tableId in tables:\n",
+    "    ###### For tract AND blockgroup...\n",
+    "    for area in ['Tracts', 'BlockGroups']:\n",
+    "#     area = 'Tracts'\n",
+    "        q = buildQuery(mrcogkey, tableId, setArea(area), setCounty('*'), y)\n",
+    "        if area == 'Tracts':\n",
+    "            df = getTableToPandas(q, errors)\n",
+    "        elif area == 'BlockGroups':\n",
+    "            df = countiesByBlockGroups(mrcogkey, tableId, mrcog_counties, y, errors):\n",
+    "        if not df:\n",
+    "            continue\n",
+    "        simpleGeoid(df)\n",
+    "        df = pandasRegion(df, 'GEO_ID', 'MRCOG_Area', mrcog_tracts)\n",
+    "    ## !!In order to get annotation, need to sort columns\n",
+    "    ## Split out annotation >>> Save\n",
+    "            # Is annotation saved in the same data dictionary format? Or like an AFF table?\n",
+    "    ## !!!! Probably need a folder for annotation\n",
+    "            # Could the empty table check be used for annotation? I think so?\n",
+    "        cols_by_letter = sortColumns(df)\n",
     "\n",
-    "###### For tract AND blockgroup...\n",
+    "        anno_schema = cols_by_letter['G'] + cols_by_letter['A']\n",
+    "        anno_df = df[anno_schema]\n",
+    "        if not isEmptyTable(anno_df):\n",
+    "            anno_labels = [cleanAlias(FULL_VARIABLE_DICT[a]) for a in anno_df.columns.to_list()]\n",
+    "            anno_df.loc[-1] = anno_labels\n",
+    "            df.index = df.index + 1\n",
+    "            df.sort_index(inplace=True)\n",
+    "            out_anno_name = '{}_{}acs5_Annotation.xlsx'.format(tableId, y)\n",
+    "            out_anno_path = path.join(out_anno_dir, out_anno_name)\n",
+    "            df = df.replace(annotation_all_types, '')\n",
+    "\n",
+    "        # After that, the rest is just formatting? Table name, dictionary, and universe?\n",
+    "        main_schema = cols_by_letter['G'] + cols_by_letter['E'] + cols_by_letter['M']\n",
+    "        df = df[main_schema]\n",
+    "        main_labels = [allVariables[m] for m in df.columns.to_list()]\n",
+    "\n",
+    "        dataDictionary = createDataDictionary(df, tableId)\n",
+    "\n",
+    "        output_file_name = '{}_{}acs5_{}_{}.xlsx'.format(\n",
+    "            tableId,\n",
+    "            y,\n",
+    "            area,\n",
+    "            tableFileNames[tableId]\n",
+    "        )\n",
+    "        out_dir = path.join(working_folder, 'ExcelWorkbooks_{}'.format(area))\n",
+    "        out_file_path = path.join(out_dir, output_file_name)\n",
+    "\n",
+    "        if len(out_file_path) > 260:\n",
+    "            maxFileLen = 255 - len(out_dir)\n",
+    "            truncated_filename = output_file_name[:maxFileLen] + '.xlsx'\n",
+    "            out_file_path = path.join(out_dir, truncated_filename)\n",
+    "\n",
+    "        with pd.ExcelWriter(fullOutputPath) as excelOut:\n",
+    "            dataDictionary.to_excel(\n",
+    "                excelOut,\n",
+    "                sheet_name='Data_Dictionary',\n",
+    "                header=True,\n",
+    "                index=False\n",
+    "            )\n",
+    "            result.to_excel(\n",
+    "                excelOut,\n",
+    "                sheet_name='Table_{}'.format(tableId),\n",
+    "                header=True,\n",
+    "                index=False\n",
+    "            )\n",
+    "\n",
+    "out_error_path = path.join(working_folder, 'ApiErrorLog.xlsx')\n",
+    "errors.to_excel(out_error_path)\n",
+    "\n",
+    "\n",
+    "\n",
     "\n",
     "## Query to data frame\n",
     "\n",
@@ -113,16 +243,35 @@
     "'''Sorting columns should be a function. Then it can be used in the main DF function to make numeric,\n",
     "and then be called by the user for annotation, etc.'''\n",
     "\n",
-    "## def simpleGeoid()\n",
+    "def simpleGeoid(pandasDataFrame):\n",
+    "    '''DOES THIS NEED TO RETURN THE DF?'''\n",
+    "    df = pandasDataFrame\n",
+    "    df['GEO_ID'] = df['GEO_ID'].str[9:]\n",
+    "    return\n",
     "\n",
-    "## !!In order to get annotation, need to sort columns\n",
-    "## Split out annotation >>> Save\n",
-    "        # Is annotation saved in the same data dictionary format? Or like an AFF table?\n",
-    "## !!!! Probably need a folder for annotation\n",
-    "        # Could the empty table check be used for annotation? I think so?\n",
+    "\n",
+    "def getTableIdFromDataFrame(pandasDataFrame):\n",
+    "    cols = pandasDataFrame.columns.to_list()\n",
+    "    code = ''\n",
+    "    while code == '':\n",
+    "        for c in cols:\n",
+    "            if c not in base_api_label_dictionary:\n",
+    "                code = c.split('_')[0]\n",
+    "    return code\n",
     "    \n",
-    "    \n",
-    "# After that, the rest is just formatting? Table name, dictionary, and universe?"
+    "def createDataDictionary(pandasDataFrame, tableId=None):\n",
+    "    if tableId:\n",
+    "        tableId = tableId\n",
+    "    else:\n",
+    "        tableId = getTableIdFromDataFrame(pandasDataFrame)\n",
+    "    fields = pandasDataFrame.columns.to_list()\n",
+    "    aliases = [cleanAlias(VARIABLES[f]) for f in fields]\n",
+    "    df = pd.DataFrame({\n",
+    "        'Table ID: {}'.format(tableId): ['', 'FIELD CODE'] + fields,\n",
+    "        tableTitles[tableId]: ['', 'FIELD ALIAS'] + aliases,\n",
+    "        tableUniverses[tableId]: ['', ''] + [''] * len(fields)\n",
+    "    })\n",
+    "    return df\n"
    ]
   },
   {
@@ -194,6 +343,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "### COLUMN SORTING ###\n",
+    "\n",
+    "def sortColumns(pandasDataFrame):\n",
+    "    df = pandasDataFrame\n",
+    "    colNames = df.columns.to_list()\n",
+    "    annos, ests, moes, places = [], [], [], []\n",
+    "    for c in colNames:\n",
+    "        if c[-1] == 'A':\n",
+    "            annos.append(c)\n",
+    "        elif c[-1] == 'E' and c != 'NAME':\n",
+    "            ests.append(c)\n",
+    "        elif c[-1] == 'M':\n",
+    "            moes.append(c)\n",
+    "        else:\n",
+    "            places.append(c)\n",
+    "    for i in [annos, ests, moes, places]:\n",
+    "        i.sort()\n",
+    "    letter_categories = {\n",
+    "        'A': annos,\n",
+    "        'E': ests,\n",
+    "        'M': moes,\n",
+    "        'G': places\n",
+    "    }\n",
+    "    return letter_categories\n",
+    "\n",
     "colCodes = df.columns.to_list()\n",
     "\n",
     "aCols, eCols, mCols, placeCols = [], [], [], []\n",
